<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="155dp"
        android:layout_height="155dp"
        app:cardCornerRadius="250dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="34dp">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_picture"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvNameAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvProfile"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="18dp"/>
    <TextView
        android:id="@+id/tvJobAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_job"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameAuthor"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="18dp"/>

    <TextView
        android:id="@+id/tvEmailAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJobAuthor"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="18dp"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAuthor"
        app:layout_constraintBottom_toTopOf="@+id/tvDisclaimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cardLinkedin">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/github_ic"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLinkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAuthor"
        app:layout_constraintBottom_toTopOf="@+id/tvDisclaimer"
        app:layout_constraintStart_toEndOf="@+id/cardGithub"
        app:layout_constraintEnd_toStartOf="@id/cardTokopedia">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/linkedin_ic"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTokopedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAuthor"
        app:layout_constraintBottom_toTopOf="@+id/tvDisclaimer"
        app:layout_constraintStart_toEndOf="@+id/cardLinkedin"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/tokopedia_ic"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"/>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_disclaimer"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvSource"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="18dp"/>

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_source"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="18dp"/>
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_build"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>